--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
   <title>Graph creator</title>
+
+  <style media="screen">
+    canvas {
+      border-width: 2px;
+      border-style: solid;
+      border-color: #611016;
+      border-radius: 6px;
+    }
+  </style>
 </head>
 
 <body>
